--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -1,6 +1,6 @@
 
 # Application Related Message
-app.footer.copyrightName= CLICK-N-MANAGE
+app.footer.copyrightName= EASY-ERP
 app.footer.copyrightYear= January 2024 
 app.footer.copyrightVersion= 1.0.1
 locale_bn=Bangla
